@@ -44,8 +44,8 @@ public class AccountDeserializerTest extends TestCase {
     AccountResponse account = GsonSingleton.getInstance().fromJson(json, AccountResponse.class);
     assertEquals(
         account.getAccountId(), "GAAZI4TCR3TY5OJHCTJC2A4QSY6CJWJH5IAJTGKIN2ER7LBNVKOCCWN7");
-    assertEquals(account.getSequenceNumber(), new Long(2319149195853854L));
-    assertEquals(account.getSubentryCount(), new Integer(0));
+    assertEquals(account.getSequenceNumber(), Long.valueOf(2319149195853854L));
+    assertEquals(account.getSubentryCount(), Integer.valueOf(0));
     assertEquals(account.getSequenceUpdatedAtLedger().longValue(), 1234);
     assertEquals(account.getSequenceUpdatedAtTime().longValue(), 4567);
     assertEquals(
